# MinecraftPanel

./: .gitignore  LICENSE  Makefile  curl.txt  test.sh  vetur.config.js
docker/: docker-compose.yml
frontend/: nuxt.config.ts  package-lock.json  package.json
frontend/components/: app.vue
frontend/components/console/: ConsoleIndex.vue  Input.vue  Textfield.vue
frontend/components/login/: Error.vue  Screen.vue
frontend/components/navbar/: Index.vue  Logout.vue
frontend/composables/: export.ts
frontend/middleware/: auth.global.ts
frontend/pages/: console.vue  index.vue
frontend/src/components/console/: Console.vue  Input.vue  Item.vue  Textfield.vue  data.ts
frontend/src/pages/: index.astro
minecraft_server_starter/: .env  Cargo.toml  Makefile  Rocket.toml  database.db
minecraft_server_starter/migrations/2022-10-11-172259_create_table/: down.sql  up.sql
minecraft_server_starter/src/: config.rs  main.rs  minecraft_routes.rs  schema.rs  server_process.rs
minecraft_server_starter/src/auth/: auth_routes.rs  auth_state.rs  database.rs  mod.rs  models.rs  schema.rs
