[package]
name = "minecraft_server_starter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
toml = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.85"
reqwest = { version = "0.11", features = ["json"] }
rocket = { version = "0.5.0-rc.2", features = ["json", "secrets"] }
regex = "1.6.0"
tokio-tungstenite = "*"
futures-util = { version = "0.3", features = ["async-await", "sink", "std"] }
tokio-stream = { version = "0.1.9", features = ["sync"] }
rocket_cors = { git = "https://github.com/lawliet89/rocket_cors", branch = "master" }

[target.'cfg(unix)'.dependencies]
nix = "0.25.0"

[profile.release]
opt-level = 'z'     # Optimize for size.
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = 'abort'     # Abort on panic
strip = true        # Strip symbols from binary*